2007-01-24  NOMIYA Masaru <nomiya@galaxy.dti.ne.jp>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Relax regexp
	for rss group.

2007-01-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Update regexps
	for book.booktimes, book.bunko, book.edu, book.navi, book.ranking
	and book.special groups.
	(shimbun-asahi-get-headers): Modify regexps for book.* groups.

2007-01-18  Friedrich Delgado Friedrichs  <delgado@dfn-cert.de>

	* w3m-proc.el (w3m-process-ssl-passphrase): New variable.
	(w3m-process-filter): Enable w3m to authenticate itself with a
	client certificate.

2007-01-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Make
	kansai.sanshi group follow site change.

2007-01-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el: Autoload iswitchb-read-buffer when compiling.

2007-01-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-opentechpress-jp.el: Inherit `shimbun-multi' class in
	addition to `shimbun-rss'.
	(shimbun-multi-next-url, shimbun-multi-clear-contents): New
	methods.

2007-01-16  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-slashdot-jp.el (shimbun-slashdot-jp-group-alist): Add
	new group - IT & Hardware section.

2007-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yahoo.el (shimbun-get-headers): Look for articles in
	next pages in addition to past pages.

2007-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yahoo.el (shimbun-yahoo-groups-table): Move regexp
	from shimbun-get-headers and improve; update groups for all
	prefectures.
	(shimbun-get-headers): Move regexp to shimbun-yahoo-groups-table;
	ignore access ranking section; improve handling of old articles;
	support range.
	(shimbun-make-contents): Remove headline and garbage.

2007-01-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Remove left
	margin from articles in culture.yurufemi group.
