@@ -186,7 +186,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1234 $"))
+    (let ((rev "$Revision: 1.1235 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1136))
 	   (format "1.4.%d" (+ rev 50)))))
@@ -2880,6 +2880,9 @@ nil.  When the cursor is either in the minibuffer or in the echo area
 and `w3m-verbose' is nil, it behaves as `format' and simply returns a
 string.  When `w3m-verbose' is non-nil, it behaves identically as
 `message', that displays a given message with logging."
+  ;; Always clear previous message in order to shrink the window height
+  ;; for the echo area.  Only Emacs 22 or greater requires it, though.
+  (message nil)
   (if w3m-verbose
       (apply (function message) args)
     (if (when w3m-process-background
