@@ -1,3 +1,8 @@
+2007-01-24  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-message): Clear previous message first.  Suggested
+	by David Hansen <david.hansen@gmx.net>.
+
 2007-01-24  NOMIYA Masaru <nomiya@galaxy.dti.ne.jp>
 
 	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Relax regexp
